--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         id="customNavbar"
       >
         <div class="container">
-          <a class="navbar-brand" href="/">Pilar</a>
+          <a class="navbar-brand" href="https://hardyan12.github.io/PilarCity/">Pilar</a>
           <button
             class="navbar-toggler"
             type="button"
