--- a/turismo.html
+++ b/turismo.html
@@ -30,7 +30,7 @@
       id="customNavbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="/">Pilar</a>
+        <a class="navbar-brand" href="index.html">Pilar</a>
         <button
           class="navbar-toggler"
           type="button"
