--- a/index.html
+++ b/index.html
@@ -3,30 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hsitorias</title>
+    <title>Historias</title>
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-    crossorigin="anonymous"
-  />
-  <link rel="stylesheet" href="style.css" />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"
-  ></script>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="bg-body overflow-x-hidden">
-
-
     <header>
       <nav
         class="navbar navbar-expand-lg fixed-top shadow-sm bg-header"
@@ -65,8 +62,6 @@
       </nav>
     </header>
 
-
-
     <div class="container-fluid my-5">
       <div class="row">
         <div class="col-12 bg-historia-banner">
@@ -82,67 +77,98 @@
 
       <div class="container-fluid py-5">
         <div class="row">
-          <div class="col-8">
+          <div class="col-sm-12 col-lg-8">
             <h2 class="fs-2 fw-bolder">
               Remontémonos a aquellas épocas en la que la ciudad apenas estaba
               en sus cimientos
             </h2>
             <p class="text-center parrafo">
-              Fue fundada por orden del gobernador intendente Pedro Mello de Portugal el 12 de octubre de 1779 con el nombre de Villa del Ñeembucú. Cuatro años más tarde fue llamada Villa del Pilar. 
-              En el gobierno de Gaspar Rodríguez de Francia el Puerto de Pilar fue uno de los únicos habilitados en todo el Paraguay para el comercio con el exterior, comercializando principalmente yerba mate y algodón.
-              Pilar tuvo un papel importante en la Guerra de la Triple Alianza (1864-1870), en la que Paraguay se enfrentó a Brasil, Argentina y Uruguay. La ciudad fue escenario de batallas y conflictos durante esta guerra devastadora.
-              Después de la guerra, Pilar y Ñeembucú se recuperaron lentamente. La agricultura, la ganadería y la navegación fluvial se convirtieron en actividades económicas fundamentales para la región. En 1983 ocurrió una inundación que dejó bajo agua a prácticamente toda la ciudad, por esta razón en la actualidad la misma está rodeada de muros de contención.
-              En el año 2000 se terminó de unir el tramo asfaltado de la Ruta IV ''Gral. José Eduvigis Díaz'', de este modo la ciudad dejó de quedar aislada del país, por tramo de tierra.
-              En la actualidad, Pilar es una ciudad tranquila con una economía basada en la agricultura, la pesca y el turismo. La ciudad se destaca por su arquitectura colonial y su cultura arraigada en la tradición paraguaya.
+              Fue fundada por orden del gobernador intendente Pedro Mello de
+              Portugal el 12 de octubre de 1779 con el nombre de Villa del
+              Ñeembucú. Cuatro años más tarde fue llamada Villa del Pilar. En el
+              gobierno de Gaspar Rodríguez de Francia el Puerto de Pilar fue uno
+              de los únicos habilitados en todo el Paraguay para el comercio con
+              el exterior, comercializando principalmente yerba mate y algodón.
+              Pilar tuvo un papel importante en la Guerra de la Triple Alianza
+              (1864-1870), en la que Paraguay se enfrentó a Brasil, Argentina y
+              Uruguay. La ciudad fue escenario de batallas y conflictos durante
+              esta guerra devastadora. Después de la guerra, Pilar y Ñeembucú se
+              recuperaron lentamente. La agricultura, la ganadería y la
+              navegación fluvial se convirtieron en actividades económicas
+              fundamentales para la región. En 1983 ocurrió una inundación que
+              dejó bajo agua a prácticamente toda la ciudad, por esta razón en
+              la actualidad la misma está rodeada de muros de contención. En el
+              año 2000 se terminó de unir el tramo asfaltado de la Ruta IV
+              ''Gral. José Eduvigis Díaz'', de este modo la ciudad dejó de
+              quedar aislada del país, por tramo de tierra. En la actualidad,
+              Pilar es una ciudad tranquila con una economía basada en la
+              agricultura, la pesca y el turismo. La ciudad se destaca por su
+              arquitectura colonial y su cultura arraigada en la tradición
+              paraguaya.
             </p>
           </div>
           <div class="col-sm-12 col-lg-4">
             <h3 class="text-center parrafo">Ciudad de Pilar</h3>
             <p class="parrafo">
-              Pilar es la ciudad capital del departamento de Ñeembucú en el Paraguay. Se encuentra ubicada a 358 km de Asunción, a orillas del río Paraguay y del arroyo Ñeembucú, en la frontera con la República Argentina.
+              Pilar es la ciudad capital del departamento de Ñeembucú en el
+              Paraguay. Se encuentra ubicada a 358 km de Asunción, a orillas del
+              río Paraguay y del arroyo Ñeembucú, en la frontera con la
+              República Argentina.
             </p>
-            <img src="img/pilar.jpeg" alt="" class="img-fluid shadow rounded">
+            <img src="img/pilar.jpeg" alt="" class="img-fluid shadow rounded" />
           </div>
 
-          
-          <div class="section card mx-5 py-5 my-5 shadow-lg rounded border-0 bg-img"
-          id="section2">
-          <div class="col-12 my-3">
-            <h2 class="fs-4 fw-bolder text-center">Si te gustaria conocer más sobre Pilar, aquí te dejamos algunos datos.</h2>
-          </div>
+          <div
+            class="section card mx-5 py-5 my-5 shadow-lg rounded border-0 bg-img"
+            id="section2"
+          >
+            <div class="col-12 my-3">
+              <h2 class="fs-4 fw-bolder text-center">
+                Si te gustaria conocer más sobre Pilar, aquí te dejamos algunos
+                datos.
+              </h2>
+            </div>
 
-          <div class="row d-flex justify-content-center align-items-center my-2">
-          <div class="col-sm-6 col-md-4">
-            <ul class="list-unstyled">
-              <ul>
-                <li>El primer poblador y organizador del poblado fue el capitán Juan de Jara</li>
-                <li>Pilar se divide en un total de 34 barrios</li>
-              </ul>
-            </ul>
+            <div
+              class="row d-flex justify-content-center align-items-center my-2"
+            >
+              <div class="col-sm-6 col-md-4">
+                <ul class="list-unstyled">
+                  <ul>
+                    <li>
+                      El primer poblador y organizador del poblado fue el
+                      capitán Juan de Jara
+                    </li>
+                    <li>Pilar se divide en un total de 34 barrios</li>
+                  </ul>
+                </ul>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                <ul class="list-unstyled">
+                  <ul>
+                    <li>
+                      Pilar es una ciudad comercial, turística e industrial.
+                    </li>
+                    <li>
+                      Suele ser conocida como "la Auténtica Perla del Sur"
+                    </li>
+                  </ul>
+                </ul>
+              </div>
+              <div class="col-sm-6 col-md-4">
+                <ul class="list-unstyled">
+                  <ul>
+                    <li>
+                      Otro apodo es la Capital de la Cordialidad Paraguaya
+                    </li>
+                    <li>Pilar cuenta con 29 327 habitantes en total</li>
+                  </ul>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-6 col-md-4">
-            <ul class="list-unstyled">
-              <ul>
-                <li>Pilar es una ciudad comercial, turística e industrial.</li>
-                <li>Suele ser conocida como "la Auténtica Perla del Sur"</li>
-              </ul>
-            </ul>
-          </div>
-          <div class="col-sm-6 col-md-4">
-            <ul class="list-unstyled">
-              <ul>
-                <li>Otro apodo es la Capital de la Cordialidad Paraguaya</li>
-                <li>Pilar cuenta con 29 327 habitantes en total</li>
-              </ul>
-            </ul>
-          </div>
-        </div>
-      </div>
-
         </div>
       </div>
     </div>
   </body>
 </html>
-
-
