--- a/personajes.html
+++ b/personajes.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -246,10 +247,11 @@
                 </div>
             </div>
             
-              <a class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <a class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal" title="Ricardo Mazó">
                 <img
                   src="img/RicardoMazó.jpg"
                   class="img-fluid rounded-circle shadow-lg" style="width: 50vh;"
+                  alt="Ricardo Mazó"
                 />
               </a>
                 <h5 class="text-center card-title my-3">Ricardo Mazó</h5>
