--- a/turismo.html
+++ b/turismo.html
@@ -20,7 +20,7 @@
   <header>
     <nav class="navbar navbar-expand-lg fixed-top shadow-sm bg-header" id="customNavbar">
       <div class="container">
-        <a class="navbar-brand" href="/">Pilar</a>
+        <a class="navbar-brand" href="index.html">Pilar</a>
         <button
           class="navbar-toggler"
           type="button"
